tests/baselines/reference/classAbstractGeneric(strict=true).errors.txt
classAbstractGeneric.ts(2,5): error TS2564: Property 't' has no initializer and is not definitely assigned in the constructor.
classAbstractGeneric.ts(5,14): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
classAbstractGeneric.ts(10,7): error TS2654: Non-abstract class 'C<T>' is missing implementations for the following members of 'A<T>': 'foo', 'bar'.
classAbstractGeneric.ts(12,7): error TS2654: Non-abstract class 'D' is missing implementations for the following members of 'A<number>': 'foo', 'bar'.
classAbstractGeneric.ts(14,7): error TS2515: Non-abstract class 'E<T>' does not implement inherited abstract member bar from class 'A<T>'.
classAbstractGeneric.ts(18,7): error TS2515: Non-abstract class 'F<T>' does not implement inherited abstract member foo from class 'A<T>'.


==== classAbstractGeneric.ts (6 errors) ====
    abstract class A<T> {
        t: T;
        ~
!!! error TS2564: Property 't' has no initializer and is not definitely assigned in the constructor.
        
        abstract foo(): T;
        abstract bar(t: T);
                 ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    abstract class B<T> extends A<T> {}
    
    class C<T> extends A<T> {} // error -- inherits abstract methods
          ~
!!! error TS2654: Non-abstract class 'C<T>' is missing implementations for the following members of 'A<T>': 'foo', 'bar'.
    
    class D extends A<number> {} // error -- inherits abstract methods
          ~
!!! error TS2654: Non-abstract class 'D' is missing implementations for the following members of 'A<number>': 'foo', 'bar'.
    
    class E<T> extends A<T> { // error -- doesn't implement bar
          ~
!!! error TS2515: Non-abstract class 'E<T>' does not implement inherited abstract member bar from class 'A<T>'.
        foo() { return this.t; }
    }
    
    class F<T> extends A<T> { // error -- doesn't implement foo
          ~
!!! error TS2515: Non-abstract class 'F<T>' does not implement inherited abstract member foo from class 'A<T>'.
        bar(t : T) {}
    }
    
    class G<T> extends A<T> {
        foo() { return this.t; }
        bar(t: T) { }
    }